# WCG

./: .gitmodules  CMakeLists.txt
OSC/: CMakeLists.txt  README.md
OSC/OSC/: CMakeLists.txt
OSC/OSC/inc/: Adder.h  Console.h  Debug.h  Divider.h  Element.h  Engine.h  Multiplication.h  Number.h  Numeric.h  OSC.h  Operator.h  Shuntingyard.h  Subtraction.h  Types.h
OSC/OSC/src/: Adder.cpp  CMakeLists.txt  Console.cpp  Debug.cpp  Divider.cpp  Engine.cpp  Multiplicator.cpp  Numeric.cpp  OSC.cpp  Shuntingyard.cpp  Subtraction.cpp
WCG/: CMakeLists.txt  WCG.cpp  WCG.h
WCG/inc/: WCA.h  WCF.h  WCFA.h  WCG.h  WCIA.h  WCN.h  WCNA.h
WCG/src/: CMakeLists.txt  WCG.cpp  main.cpp
